--- a/home.html
+++ b/home.html
@@ -37,17 +37,17 @@
             <input type="text" id="searchBar" placeholder="Search for donors by name, blood type or location..." onkeyup="searchDonors()">
         </div>
         
-        <div class="location-container">
+        <!-- <div class="location-container">
             <button class="location-button" onclick="getLocation()">
                 <i class="fas fa-map-marker-alt"></i>
                 Find Nearby Donors
             </button>
             <p id="userLocation"></p>
-        </div>
+        </div> -->
 
         <!-- Donor list -->
         <div class="donors-list">
-            <h2>Available Donors</h2>
+            <h2 style="text-align: center;">Available Donors</h2>
             <ul id="donorList">
                 <!-- Donor list will be populated by JavaScript -->
             </ul>
@@ -58,10 +58,10 @@
         <div class="container">
             <div class="footer-container">
                 <div class="footer-links">
-                    <a href="#">About Us</a>
-                    <a href="#">FAQ</a>
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Contact</a>
+                    <a href="about.html">About Us</a>
+                    <a href="FAQ.html">FAQ</a>
+                    <a href="Privacy Policy Page.html">Privacy Policy</a>
+                    <a href="contact.html">Contact</a>
                 </div>
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -69,7 +69,7 @@
                     <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
                 <p>&copy; 2025 Blood Heroes. All rights reserved.</p>
-                <p>Contact us: SRKR.AIML@gmail.com</p>
+                <p>Contact us:BloodHeroes@gmail.com</p>
             </div>
         </div>
     </footer>
