--- a/home.html
+++ b/home.html
@@ -21,6 +21,13 @@
                         Donate Blood
                     </button>
                 </a>
+                <!-- Smart Assistant Button -->
+                <a href="blood information.html">
+                    <button class="smart-assistant-button">
+                        <i class="fas fa-comment-dots"></i>
+                        Blood Group Information
+                    </button>
+                </a>
             </div>
         </div>
     </header>
