--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
                         <p>#Web Developer.</p>
                     </div>
                     <div class="team-member">
-                        <img src="#" alt="J.Karthik">
+                        <img src="team2.jpeg" alt="J.Karthik">
                         <h3>J.Karthik</h3>
                         <p>Student Of SRKR Engineering.</p>
                         <p>#Web Developer.</p>
@@ -168,7 +168,7 @@
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
                 <p>&copy; 2025 Blood Heroes. All rights reserved.</p>
                 <p>Contact us:BloodHeroes@gmail.com</p>
