--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
-            font-size: 16px;
+            font-size: 16px;    
             color: var(--text-dark);
         }
 
@@ -456,7 +456,7 @@
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
                 <p>&copy; 2025 Blood Heroes. All rights reserved.</p>
                 <p>Contact us: BloodHeroes@gmail.com</p>
