--- a/blood information.html
+++ b/blood information.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blood Heroes - Smart Assistant</title>
+    <title>Blood Heros - Smart Assistant</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🩸</text></svg>">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chart.js/3.9.1/chart.min.js"></script>
@@ -15,7 +15,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-heartbeat"></i>
-                   <a href="home.html"><h1>Blood Heroes</h1></a> 
+                   <a href="home.html"><h1>Blood Heros</h1></a> 
                 </div>
                 <div class="nav-buttons">
                     <a href="home.html" class="nav-button">
