--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-heartbeat"></i>
-                    <h1>Blood Heroes</h1>
+                    <h1>Blood Heros</h1>
                 </div>
                 <a href="form.html">
                     <button class="donate-button">
@@ -125,8 +125,8 @@
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2025 Blood Heroes. All rights reserved.</p>
-                <p>Contact us: BloodHeroes@gmail.com</p>
+                <p>&copy; 2025 Blood Heros. All rights reserved.</p>
+                <p>Contact us: BloodHeros@gmail.com</p>
             </div>
         </div>
     </footer>
