--- a/form.html
+++ b/form.html
@@ -479,7 +479,7 @@ button[type="submit"]:hover::before {
             }
 
             // First check if a donor with the same mobile number already exists
-            fetch(`http://localhost:3000/donors/check/${number}`)
+            fetch(`https://blood-backend-1-u7vl.onrender.com/donors/check/${number}`)
                 . then(response => response.json())
                 .then(data => {
                     if (data.exists) {
@@ -491,7 +491,7 @@ button[type="submit"]:hover::before {
                     const newDonor = { name, age, number, bloodType, location };
 
                     // Send donor data to the backend
-                    fetch('http://localhost:3000/donors', {
+                    fetch('https://blood-backend-1-u7vl.onrender.com/donors', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(newDonor)
@@ -522,7 +522,7 @@ button[type="submit"]:hover::before {
                     // Fallback to the original code if the check endpoint is not available
                     const newDonor = { name, age, number, bloodType, location };
                     
-                    fetch('http://localhost:3000/donors', {
+                    fetch('https://blood-backend-1-u7vl.onrender.com/donors', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(newDonor)
